<resources>
    <string name="app_name">RaulGHweek2</string>
    <string name="buttonMainStr">Siguiente</string>
    <string name="inputTextNameStr">Nombre Completo</string>
    <string name="textViewDate">Fecha de nacimiento</string>
    <string name="textViewOk">Aceptar</string>
    <string name="textViewCancel">Cancelar</string>
    <string name="inputTextPhoneStr">Telefono</string>
    <string name="inputTextEmailStr">Email</string>
    <string name="inputTextDescriptionStr">Descripción del Contacto</string>



    <string name="Titulo2Str">Confirmar Datos</string>
    <string name="Name2aStr">Nombre:</string>
    <string name="Name2bStr">prueba</string>
    <string name="Date2aStr">Fecha de nacimiento:</string>
    <string name="Date2bStr">prueba</string>
    <string name="Phone2aStr">Telefono:</string>
    <string name="Phone2bStr">prueba</string>
    <string name="Email2aStr">Email:</string>
    <string name="Email2bStr">prueba</string>
    <string name="Description2aStr">Descripción:</string>
    <string name="Description2bStr">prueba</string>
    <string name="button2Str">Editar Datos</string>

    <string-array name="monthsStr">
        <item>Enero</item>
        <item>Febreo</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Ocubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

</resources>
