<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="@dimen/datePickerMarginBottom">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputTextNameStr"
                    android:inputType="textCapCharacters"
                    android:selectAllOnFocus="true"
                    android:nextFocusDown="@+id/cardView"/>

            </android.support.design.widget.TextInputLayout>



            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBackGround"
                android:elevation="@dimen/datePickerElevation"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewDatePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewDate"
                        android:theme="@style/MyTextViewMain"
                        android:layout_marginTop="@dimen/text_margin_top" />

                    <DatePicker
                        android:id="@+id/datePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/datePicker_height"
                        android:datePickerMode="spinner"
                        android:calendarViewShown="false"
                        android:layout_gravity="center_horizontal"
                        android:scrollbarSize="16dp"
                        android:selectAllOnFocus="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewDatePickerCancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textViewCancel"
                            android:theme="@style/MyTextViewMain"
                            android:layout_weight="1"
                            android:layout_marginBottom="@dimen/text_margin_bottom" />

                        <TextView
                            android:id="@+id/textViewDatePickerOk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textViewOk"
                            android:theme="@style/MyTextViewMain"
                            android:layout_weight="1"
                            android:layout_marginBottom="@dimen/text_margin_bottom" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>




            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextPhoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/datePickerMarginTop">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputTextPhoneStr"
                    android:inputType="textCapCharacters"
                    android:selectAllOnFocus="true"
                    android:nextFocusDown="@+id/editTextEmail" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputTextEmailStr"
                    android:inputType="textCapCharacters"
                    android:selectAllOnFocus="true"
                    android:nextFocusDown="@+id/editTextDescription"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextDescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputTextDescriptionStr"
                    android:inputType="textCapCharacters"
                    android:selectAllOnFocus="true"
                    android:nextFocusDown="@+id/buttonMain"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/buttonMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonMainStr"
                android:theme="@style/MyRaisedButton"
                android:layout_gravity="bottom"
                android:selectAllOnFocus="true" />


        </LinearLayout>




    </FrameLayout>




</android.support.design.widget.CoordinatorLayout>


